Fixing spacing issue at bottom of editor for Vintage style pack.

--- a/radcliffe-2/assets/css/editor-style-vintage.css
+++ b/radcliffe-2/assets/css/editor-style-vintage.css
@@ -66,6 +66,7 @@ Editor Styles for Radcliffe 2: Vintage Style Pack
 .editor-writing-flow {
 	border: 4px double #c7c4b4;
 	background-color: rgba(255,255,255,0.3);
+	padding-bottom: 4em;
 }
 
 .editor-block-list__layout .editor-block-list__block[data-align="full"],
